--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "firebase": "^9.8.3",
     "is_js": "^0.9.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
